--- a/frontend/front-app/package.json
+++ b/frontend/front-app/package.json
@@ -11,19 +11,23 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vueuse/core": "^10.8.0",
+    "@vueuse/core": "^10.9.0",
     "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.1",
-    "vue": "^3.4.15",
-    "vue-router": "^4.3.0"
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
+    "vuetify": "^3.5.9"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
     "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "eslint-plugin-vuetify": "^2.2.0",
     "prettier": "^3.0.3",
-    "vite": "^5.0.11"
+    "vite": "^5.1.5"
   }
 }
